--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.9.0",
     "image-webpack-loader": "^3.2.0",
@@ -52,6 +53,7 @@
     "jsdom": "^9.11.0",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
+    "progress-bar-webpack-plugin": "^1.9.3",
     "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.2",
