--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,6 +12,8 @@ rules:
     - 2
     - as-needed
     - requireForBlockBody: false
+  no-confusing-arrow:
+    - 0
   react/prop-types:
     - 1
     - skipUndeclared: true
