--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mocha": "^3.2.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "react-addons-test-utils": "^15.4.2",
+    "redux-immutable-state-invariant": "^1.2.4",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
