--- a/.babelrc
+++ b/.babelrc
@@ -18,5 +18,12 @@
     ],
     "stage-2",
     "react"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "transform-es2015-modules-commonjs"
+      ]
+    }
+  }
 }
