--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "webpack -p --env.prod",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive -R min ./test",
-    "test:watch": "npm run test -- --watch",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "prestart": "npm run build",
     "start": "http-server dist",
     "dev": "webpack-dev-server --env.dev",
@@ -34,13 +34,13 @@
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
     "babel-preset-env": "^1.1.10",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.23.0",
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
     "css-loader": "^0.26.2",
+    "enzyme": "^2.7.1",
     "eslint": "^3.16.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -50,13 +50,13 @@
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.9.0",
+    "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^3.2.0",
-    "jquery": "^3.1.1",
-    "jsdom": "^9.11.0",
+    "jest-cli": "^19.0.2",
     "lodash": "^4.17.4",
-    "mocha": "^3.2.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "react-addons-test-utils": "^15.4.2",
+    "react-test-renderer": "^15.4.2",
     "redux-immutable-state-invariant": "^1.2.4",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.2",
@@ -64,5 +64,22 @@
     "webpack": "^2.2.1",
     "webpack-config-utils": "^2.3.0",
     "webpack-dev-server": "^2.4.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/*.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 50,
+        "lines": 33,
+        "statements": 25
+      }
+    },
+    "moduleNameMapper": {
+      "\\.(jpe?g|png|gif|svg|ico)$": "<rootDir>/tools/fileMock.js",
+      "\\.(css)$": "identity-obj-proxy"
+    }
   }
 }
