--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,6 +14,13 @@ rules:
     - requireForBlockBody: false
   no-confusing-arrow:
     - 0
+  import/no-extraneous-dependencies:
+    - 2
+    - devDependencies:
+      - "**/*.test.js?(x)"
+      - "**/*.spec.js?(x)"
+      optionalDependencies: false
+      peerDependencies: false
   react/prop-types:
     - 1
     - skipUndeclared: true
