--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-register": "^6.23.0",
     "css-loader": "^0.26.2",
     "enzyme": "^2.7.1",
+    "enzyme-to-json": "^1.5.0",
     "eslint": "^3.16.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
