--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "webpack -p --env.prod",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch",
+    "test": "jest",
+    "test:update": "npm run test -- --updateSnapshot",
+    "test:watch": "npm run test -- --watch",
     "prestart": "npm run build",
     "start": "http-server dist",
     "dev": "webpack-dev-server --env.dev",
@@ -67,17 +68,6 @@
     "webpack-dev-server": "^2.4.1"
   },
   "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.js?(x)"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 0,
-        "functions": 0,
-        "lines": 0,
-        "statements": 0
-      }
-    },
     "moduleNameMapper": {
       "\\.(jpe?g|png|gif|svg|ico)$": "<rootDir>/tools/fileMock.js",
       "\\.(css)$": "identity-obj-proxy"
