--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,6 +14,8 @@ rules:
     - requireForBlockBody: false
   no-confusing-arrow:
     - 0
+  padded-blocks:
+    - 0
   import/no-extraneous-dependencies:
     - 2
     - devDependencies:
