--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "image-webpack-loader": "^3.2.0",
     "jest-cli": "^19.0.2",
     "lodash": "^4.17.4",
+    "nock": "^9.0.9",
     "progress-bar-webpack-plugin": "^1.9.3",
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.4.2",
     "redux-immutable-state-invariant": "^1.2.4",
+    "redux-mock-store": "^1.2.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
