--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.15.3",
     "babel-polyfill": "^6.23.0",
     "history": "^4.6.1",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
