--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "axios": "^0.15.3",
     "babel-polyfill": "^6.23.0",
     "history": "^4.6.1",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
